--- a/index.html
+++ b/index.html
@@ -102,14 +102,12 @@
 
     #doc {
       max-width: 960px;
-      margin: 10px auto;
+      margin: 0 auto;
       height: 100%;
-      padding: 10px 20px;
-      margin-bottom: 50px;
     }
 
-    body {
-      padding-bottom: 50px !important;
+    #doc > :last-child {
+      padding-bottom: 120px;
     }
   </style>
 
