--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     @font-face {
       font-family: "M23";
-      src: url(m23.TTF);
+      src: url(m23.ttf);
     }
 
     @font-face {
