Include embed for collab

--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@
           unmatured portions.</span
         >
       </p>
+      <script src="https://gist.github.com/villanuevawill/d224c23b30146bbf0733c8b9e5d4277b.js"></script>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
