blockquote formatting and img responsiveness

--- a/index.html
+++ b/index.html
@@ -95,12 +95,24 @@
       font-family: "Roboto";
     }
 
+    blockquote {
+      font-size: 16px;
+      padding: 0 1em;
+      color: #777;
+      border-left: 0.25em solid #ddd;
+    }
+
     table {
       display: block;
       overflow: auto;
       width: 100%;
       word-break: normal;
       word-break: keep-all;
+    }
+
+    img {
+      height: auto;
+      width: 100%;
     }
 
     #game-canvas {
@@ -114,6 +126,7 @@
       margin: 0 auto;
       height: 100%;
       padding: 0px 12px;
+      min-width: 400px;
     }
 
     #doc > :last-child {
