small typos and css

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     }
 
     #doc > :last-child {
-      padding-bottom: 120px;
+      padding-bottom: 100px;
     }
 
     #play-game-button {
@@ -162,7 +162,11 @@
 
   <body>
     <div id="doc" data-hard-breaks="true">
-      <h1 style="margin-bottom: -30px" id="Hyperdrive" data-id="Hyperdrive">
+      <h1
+        style="margin-bottom: -30px; margin-top: 30px"
+        id="Hyperdrive"
+        data-id="Hyperdrive"
+      >
         <span>Hyperdrive</span>
       </h1>
       <h4>Authored by Element Finance</h4>
@@ -689,7 +693,7 @@
           parameters to explore profitability and market environments. The
           embedded notebook has generated graphs on PNL and more. Initial
           numbers look positive and we encourage you to explore on your own. We
-          will be cosntantly updating our research, stay tuned for more!</span
+          will be constantly updating our research, stay tuned for more!</span
         >
       </p>
       <p>
