--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Element-Dark.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hyerdrive</title>
+    <meta
+      name="keywords"
+      content="Hyperdrive, Documentation, Docs, Element, Finance, Element Finance, Hyperdrive Element Finance"
+    />
+    <meta
+      name="description"
+      content="Hyperdrive is the next research leap from the Element Finance team on variable
+    and fixed rate primitives."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@elementfi" />
+    <meta name="twitter:title" content="Hyperdrive - Element Finance" />
+    <meta
+      name="twitter:description"
+      content="Hyperdrive is the next research leap from the Element Finance team on variable
+      and fixed rate primitives."
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/iX8k8I5.png" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Hyperdrive - Element Finance" />
+    <meta
+      property="og:description"
+      content="Hyperdrive is the next research leap from the Element Finance team on variable
+      and fixed rate primitives."
+    />
+    <meta property="og:url" content="https://hyperdrive.element.fi" />
+    <meta property="og:image" content="https://i.imgur.com/iX8k8I5.png" />
   </head>
 
   <style>
