Meta tags, remove anon text, other misc (#25)
* Add focus to canvas when mounted

* remove anon

* small typos and css

* meta tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Element-Dark.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hyerdrive</title>
+    <meta
+      name="keywords"
+      content="Hyperdrive, Documentation, Docs, Element, Finance, Element Finance, Hyperdrive Element Finance"
+    />
+    <meta
+      name="description"
+      content="Hyperdrive is the next research leap from the Element Finance team on variable
+    and fixed rate primitives."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@elementfi" />
+    <meta name="twitter:title" content="Hyperdrive - Element Finance" />
+    <meta
+      name="twitter:description"
+      content="Hyperdrive is the next research leap from the Element Finance team on variable
+      and fixed rate primitives."
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/iX8k8I5.png" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Hyperdrive - Element Finance" />
+    <meta
+      property="og:description"
+      content="Hyperdrive is the next research leap from the Element Finance team on variable
+      and fixed rate primitives."
+    />
+    <meta property="og:url" content="https://hyperdrive.element.fi" />
+    <meta property="og:image" content="https://i.imgur.com/iX8k8I5.png" />
   </head>
 
   <style>
@@ -129,7 +158,7 @@
     }
 
     #doc > :last-child {
-      padding-bottom: 120px;
+      padding-bottom: 100px;
     }
 
     #play-game-button {
@@ -162,7 +191,11 @@
 
   <body>
     <div id="doc" data-hard-breaks="true">
-      <h1 style="margin-bottom: -30px" id="Hyperdrive" data-id="Hyperdrive">
+      <h1
+        style="margin-bottom: -30px; margin-top: 30px"
+        id="Hyperdrive"
+        data-id="Hyperdrive"
+      >
         <span>Hyperdrive</span>
       </h1>
       <h4>Authored by Element Finance</h4>
@@ -689,7 +722,7 @@
           parameters to explore profitability and market environments. The
           embedded notebook has generated graphs on PNL and more. Initial
           numbers look positive and we encourage you to explore on your own. We
-          will be cosntantly updating our research, stay tuned for more!</span
+          will be constantly updating our research, stay tuned for more!</span
         >
       </p>
       <p>
