Fix meta tag description

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <meta name="twitter:title" content="Hyperdrive - Element Finance" />
     <meta
       name="twitter:description"
-      content="Hyperdrive is the next research leap from the Element Finance team on variable
-      and fixed rate primitives."
+      content="Hyperdrive is the next research leap from the Element Finance team on variable and fixed rate primitives."
     />
     <meta name="twitter:image" content="https://i.imgur.com/iX8k8I5.png" />
 
@@ -29,8 +28,7 @@
     <meta property="og:title" content="Hyperdrive - Element Finance" />
     <meta
       property="og:description"
-      content="Hyperdrive is the next research leap from the Element Finance team on variable
-      and fixed rate primitives."
+      content="Hyperdrive is the next research leap from the Element Finance team on variable and fixed rate primitives."
     />
     <meta property="og:url" content="https://hyperdrive.element.fi" />
     <meta property="og:image" content="https://i.imgur.com/iX8k8I5.png" />
