update simluation copy

--- a/index.html
+++ b/index.html
@@ -714,16 +714,36 @@
       </p>
       <h2 id="Simulation" data-id="Simulation"><span>Simulation</span></h2>
       <p>
-        <span
-          >We’ve included an embedded simulation with code on the Hyperdrive
-          system. This notebook gives you the ability to configure different
-          parameters to explore profitability and market environments. The
-          embedded notebook has generated graphs on PNL and more. Initial
-          numbers look positive and we encourage you to explore on your own. We
-          will be constantly updating our research, stay tuned for more!</span
+        <a
+          href="https://twitter.com/PaitonDylan/status/1585647541118304259/"
+          target="_blank"
+          rel="noopener"
+          ><span>At each step</span></a
+        ><span
+          >, building Hyperdrive has been assisted by thorough
+          simulations.</span
         >
       </p>
       <p>
+        <span
+          >The notebook below is one such sample simulation. Explore
+          parameterisation and profitability in a hypothetical market
+          environment.</span
+        >
+      </p>
+      <p>
+        <span
+          >Initial numbers look positive and we encourage you to explore on your
+          own, just hit </span
+        ><a
+          href="https://colab.research.google.com/github/element-fi/elf-simulations/blob/main/examples/notebooks/hyperdrive.ipynb"
+          target="_blank"
+          rel="noopener"
+          ><span>Open in Colab</span></a
+        ><span> and run it yourself.</span>
+      </p>
+      <p><span>Our research is constantly updating, so stay tuned!</span></p>
+      <!-- <p>
         <sub
           ><em
             ><span
@@ -733,8 +753,9 @@
             ></em
           ></sub
         >
-      </p>
-      <script src="https://gist.github.com/villanuevawill/d224c23b30146bbf0733c8b9e5d4277b.js"></script>
+      </p> -->
+
+      <!-- <script src="https://gist.github.com/villanuevawill/d224c23b30146bbf0733c8b9e5d4277b.js"></script> -->
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
