added mihi intructions

--- a/index.html
+++ b/index.html
@@ -235,10 +235,19 @@
           ></em
         >
       </p>
+
       <button id="play-game-button">Play Hypers Drive Game</button>
       <div>
         <canvas id="game-canvas"></canvas>
       </div>
+
+      <img
+        style="display: none"
+        id="hihi"
+        src="/mihi.png"
+        alt=""
+        loading="lazy"
+      />
 
       <h2 id="A-New-Way-To-Trade-Rates" data-id="A-New-Way-To-Trade-Rates">
         <span>A New Way To Trade Rates</span>
