--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       font-weight: bold;
     }
 
+    i {
+      font-family: sans-serif;
+    }
+
     @font-face {
       font-family: "Teko";
       src: url("https://fonts.googleapis.com/css2?family=Teko:wght@300;500;700&display=swap");
-    }
-
-    i {
-      font-family: sans-serif;
     }
 
     h1 {
@@ -233,11 +233,7 @@
       <button id="play-game-button">Play Hypers Drive Game</button>
       <canvas id="game-canvas"></canvas>
 
-      <h2
-        tabindex="1"
-        id="A-New-Way-To-Trade-Rates"
-        data-id="A-New-Way-To-Trade-Rates"
-      >
+      <h2 id="A-New-Way-To-Trade-Rates" data-id="A-New-Way-To-Trade-Rates">
         <span>A New Way To Trade Rates</span>
       </h2>
       <p>
