--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       font-size: 90%;
       background-color: #f9f2f4;
       border-radius: 4px;
+      overflow-wrap: anywhere;
     }
 
     code,
@@ -231,7 +232,9 @@
         >
       </p>
       <button id="play-game-button">Play Hypers Drive Game</button>
-      <canvas id="game-canvas"></canvas>
+      <div>
+        <canvas id="game-canvas"></canvas>
+      </div>
 
       <h2 id="A-New-Way-To-Trade-Rates" data-id="A-New-Way-To-Trade-Rates">
         <span>A New Way To Trade Rates</span>
