--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
     }
 
     #doc {
-      max-width: 960px;
+      width: 960px;
+      max-width: 100%;
       margin: 0 auto;
       height: 100%;
       padding: 0px 4vw;
-      box-sizing: border-box;
     }
 
     #doc > :last-child {
