--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
       font-size: 36px;
     }
 
+    @media screen and (max-width: 568px) {
+      h1 {
+        font-size: 56px;
+      }
+      h2 {
+        font-size: 28px;
+      }
+    }
+
+    @media screen and (max-width: 400px) {
+      h1 {
+        font-size: 42px;
+      }
+      h2 {
+        font-size: 20px;
+      }
+    }
+
     h3 {
       font-family: "Roboto";
       font-size: 24px;
@@ -102,6 +120,7 @@
       font-size: 90%;
       background-color: #f9f2f4;
       border-radius: 4px;
+      overflow-wrap: anywhere;
     }
 
     code,
@@ -149,10 +168,11 @@
     }
 
     #doc {
-      max-width: 960px;
+      width: 960px;
+      max-width: 100%;
       margin: 0 auto;
       height: 100%;
-      padding: 0px 12px;
+      padding: 0px 4vw;
     }
 
     #doc > :last-child {
@@ -212,7 +232,9 @@
         >
       </p>
       <button id="play-game-button">Play Hypers Drive Game</button>
-      <canvas id="game-canvas"></canvas>
+      <div>
+        <canvas id="game-canvas"></canvas>
+      </div>
 
       <h2 id="A-New-Way-To-Trade-Rates" data-id="A-New-Way-To-Trade-Rates">
         <span>A New Way To Trade Rates</span>
