--- a/index.html
+++ b/index.html
@@ -743,7 +743,8 @@
         ><span> and run it yourself.</span>
       </p>
       <p><span>Our research is constantly updating, so stay tuned!</span></p>
-      <!-- <p>
+      <script src="https://gist.github.com/villanuevawill/d224c23b30146bbf0733c8b9e5d4277b.js"></script>
+      <p>
         <sub
           ><em
             ><span
@@ -753,9 +754,7 @@
             ></em
           ></sub
         >
-      </p> -->
-
-      <!-- <script src="https://gist.github.com/villanuevawill/d224c23b30146bbf0733c8b9e5d4277b.js"></script> -->
+      </p>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
