Embed added back in (#31)
Co-authored-by: William Villanueva <will@Williams-MacBook-Pro-2.local>

--- a/index.html
+++ b/index.html
@@ -765,7 +765,8 @@
         ><span> and run it yourself.</span>
       </p>
       <p><span>Our research is constantly updating, so stay tuned!</span></p>
-      <!-- <p>
+      <script src="https://gist.github.com/villanuevawill/d224c23b30146bbf0733c8b9e5d4277b.js"></script>
+      <p>
         <sub
           ><em
             ><span
@@ -775,9 +776,7 @@
             ></em
           ></sub
         >
-      </p> -->
-
-      <!-- <script src="https://gist.github.com/villanuevawill/d224c23b30146bbf0733c8b9e5d4277b.js"></script> -->
+      </p>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
