Fix wording on embed

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
         <sub
           ><em
             ><span
-              >The research described below is subject to further review,
+              >The research described above is subject to further review,
               clarification, and revision. The end design of any software is
               subject to modification.</span
             ></em
