--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
       font-size: 72px;
     }
 
+    @media screen and (max-width: 480px) {
+      h1 {
+        font-size: 60px;
+      }
+    }
+
     h2 {
       font-family: "M23";
       font-size: 36px;
