--- a/index.html
+++ b/index.html
@@ -70,12 +70,6 @@
       font-size: 72px;
     }
 
-    @media screen and (max-width: 480px) {
-      h1 {
-        font-size: 60px;
-      }
-    }
-
     h2 {
       font-family: "M23";
       font-size: 36px;
@@ -111,6 +105,25 @@
       font-weight: bold;
     }
 
+    @media screen and (max-width: 480px) {
+      h1 {
+        font-size: 55px;
+      }
+
+      h2 {
+        font-size: 25px;
+      }
+
+      h3 {
+        font-size: 22px;
+      }
+
+      h4 {
+        font-size: 18px;
+      }
+    }
+
+
     body h2 {
       margin-top: 20px;
     }
@@ -124,9 +137,13 @@
     code {
       padding: 2px 4px;
       font-size: 90%;
-      background-color: #f9f2f4;
+      color: black;
       border-radius: 4px;
       overflow-wrap: anywhere;
+    }
+
+    .codeBlock {
+      background-color: #f5f5f5;
     }
 
     code,
@@ -546,7 +563,7 @@
             </td>
           </tr>
           <tr>
-            <td style="text-align: center">
+            <td style="text-align: center" class="codeBlock">
               <code
                 >chifra state --call "0x197E90f9FAD81970bA7976f33CbD77088E5D7cf7
                 | dsr()(uint)" --file blocks.txt --no_header | awk '$5 ~
@@ -556,7 +573,7 @@
             </td>
           </tr>
           <tr>
-            <td style="text-align: center">
+            <td style="text-align: center" class="codeBlock">
               <code
                 >jp &lt; /code/trueblocks-sdk/python/dsr_rates_log.txt -input
                 csv -xy '[*][1,3]'</code
