--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@
     code {
       padding: 2px 4px;
       font-size: 90%;
-      background-color: #f9f2f4;
+      color: black;
       border-radius: 4px;
       overflow-wrap: anywhere;
+    }
+
+    .codeBlock {
+      background-color: #f5f5f5;
     }
 
     code,
@@ -540,7 +544,7 @@
             </td>
           </tr>
           <tr>
-            <td style="text-align: center">
+            <td style="text-align: center" class="codeBlock">
               <code
                 >chifra state --call "0x197E90f9FAD81970bA7976f33CbD77088E5D7cf7
                 | dsr()(uint)" --file blocks.txt --no_header | awk '$5 ~
@@ -550,7 +554,7 @@
             </td>
           </tr>
           <tr>
-            <td style="text-align: center">
+            <td style="text-align: center" class="codeBlock">
               <code
                 >jp &lt; /code/trueblocks-sdk/python/dsr_rates_log.txt -input
                 csv -xy '[*][1,3]'</code
@@ -770,7 +774,7 @@
         <sub
           ><em
             ><span
-              >The research described below is subject to further review,
+              >The research described above is subject to further review,
               clarification, and revision. The end design of any software is
               subject to modification.</span
             ></em
