--- a/index.html
+++ b/index.html
@@ -777,10 +777,10 @@
       <p>
         <sub
           ><em
-            ><span
+            ><i
               >The research described above is subject to further review,
               clarification, and revision. The end design of any software is
-              subject to modification.</span
+              subject to modification.</i
             ></em
           ></sub
         >
