--- a/index.html
+++ b/index.html
@@ -304,27 +304,25 @@
         >
       </p>
       <ol>
-        <li><span>Terms on Demand</span></li>
-        <li><span>Consolidated and Everlasting liquidity</span></li>
-        <li><span>Longs and Shorts to Determine Market Sentiment</span></li>
+        <li><span><a href=#1-Terms-On-Demand>Terms on Demand</a></span></li>
+        <li><span><a href=#2-Consolidated-and-Everlasting-Liquidity>Consolidated and Everlasting liquidity</a></span></li>
+        <li><span><a href=#3-Longs-and-Shorts-to-Determine-Market-Sentiment>Longs and Shorts to Determine Market Sentiment</a></span></li>
         <li>
-          <span>Trading Strategies</span>
+          <span><a href=#4-Trading-Strategies>Trading Strategies</a></span>
           <ul>
             <li>
-              <span>LPs Benefit From Volatility Harvesting Interest Rates</span>
+              <span><a href=#A-LPs-Benefit-From-Volatility-Harvesting-Interest-Rates>LPs Benefit From Volatility Harvesting Interest Rates</a></span>
             </li>
             <li>
-              <span
-                >Traders Benefit From Volatility Harvesting Interest Rates</span
-              >
+              <span><a href=#B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates>Traders Benefit From Volatility Harvesting Interest Rates</a></span>
             </li>
-            <li><span>Fixed Rate Borrow</span></li>
-            <li><span>Multiplied Variable Rate Exposure</span></li>
-            <li><span>Spread Borrow</span></li>
+            <li><span><a href=#C-Fixed-Rate-Borrow>Fixed Rate Borrow</a></span></li>
+            <li><span><a href=#D-Multiplied-Variable-Rate-Exposure>Multiplied Variable Rate Exposure</a></span></li>
+            <li><span><a href=#E-Spread-Borrow>Spread Borrow</a></span></li>
           </ul>
         </li>
-        <li><span>Technical Teaser</span></li>
-        <li><span>Simulation</span></li>
+        <li><span><a href=#Technical-Teaser>Technical Teaser</a></span></li>
+        <li><span><a href=#Simulation>Simulation</a></span></li>
       </ol>
       <h3 id="1-Terms-On-Demand" data-id="1-Terms-On-Demand">
         <span>1. Terms On Demand</span>
@@ -513,9 +511,7 @@
         id="B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
         data-id="B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
       >
-        <span>B. Traders Benefit From </span
-        ><span class="ui-comment-inline-span">Volatili</span
-        ><span>ty Harvesting Interest Rates</span>
+        <span>B. Traders Benefit From Volatility Harvesting Interest Rates</span>
       </h4>
       <p>
         <span
@@ -612,8 +608,7 @@
         <span>D. Multiplied Variable Rate Exposure</span>
       </h4>
       <p>
-        <span>Hyperdrive allows users to get m</span
-        ><span class="ui-comment-inline-span">ultiplied variable exposure</span
+        <span>Hyperdrive allows users to get multiplied variable exposure</span
         ><span>
           by letting them borrow additional capital from the AMM at the current
           fixed rate and use it to open a short position.</span
