--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
       </p>
       <ol>
         <li><span><a href=#1-Terms-On-Demand>Terms on Demand</a></span></li>
-        <li><span><a href=#2-Consolidated-and-Everlasting-Liquidity>Consolidated and Everlasting liquidity</a></span></li>
+        <li><span><a href=#2-Consolidated-and-Everlasting-Liquidity>Consolidated and Everlasting Liquidity</a></span></li>
         <li><span><a href=#3-Longs-and-Shorts-to-Determine-Market-Sentiment>Longs and Shorts to Determine Market Sentiment</a></span></li>
         <li>
           <span><a href=#4-Trading-Strategies>Trading Strategies</a></span>
