--- a/index.html
+++ b/index.html
@@ -241,13 +241,7 @@
         <canvas id="game-canvas"></canvas>
       </div>
 
-      <img
-        style="display: none"
-        id="hihi"
-        src="/mihi.png"
-        alt=""
-        loading="lazy"
-      />
+      <img id="hihi" src="/mihi.png" alt="" loading="lazy" />
 
       <h2 id="A-New-Way-To-Trade-Rates" data-id="A-New-Way-To-Trade-Rates">
         <span>A New Way To Trade Rates</span>
