--- a/index.html
+++ b/index.html
@@ -240,12 +240,11 @@
       </p>
 
       <button id="game-button">Play Hypers Drive Game</button>
-      <button id="game-docs">Instructions</button>
-
       <div>
         <canvas id="game-canvas"></canvas>
       </div>
 
+      <button id="game-docs">Instructions</button>
       <img
         style="display: none"
         id="hihi"
@@ -322,25 +321,63 @@
         >
       </p>
       <ol>
-        <li><span><a href=#1-Terms-On-Demand>Terms on Demand</a></span></li>
-        <li><span><a href=#2-Consolidated-and-Everlasting-Liquidity>Consolidated and Everlasting Liquidity</a></span></li>
-        <li><span><a href=#3-Longs-and-Shorts-to-Determine-Market-Sentiment>Longs and Shorts to Determine Market Sentiment</a></span></li>
         <li>
-          <span><a href=#4-Trading-Strategies>Trading Strategies</a></span>
+          <span><a href="#1-Terms-On-Demand">Terms on Demand</a></span>
+        </li>
+        <li>
+          <span
+            ><a href="#2-Consolidated-and-Everlasting-Liquidity"
+              >Consolidated and Everlasting Liquidity</a
+            ></span
+          >
+        </li>
+        <li>
+          <span
+            ><a href="#3-Longs-and-Shorts-to-Determine-Market-Sentiment"
+              >Longs and Shorts to Determine Market Sentiment</a
+            ></span
+          >
+        </li>
+        <li>
+          <span><a href="#4-Trading-Strategies">Trading Strategies</a></span>
           <ul>
             <li>
-              <span><a href=#A-LPs-Benefit-From-Volatility-Harvesting-Interest-Rates>LPs Benefit From Volatility Harvesting Interest Rates</a></span>
+              <span
+                ><a
+                  href="#A-LPs-Benefit-From-Volatility-Harvesting-Interest-Rates"
+                  >LPs Benefit From Volatility Harvesting Interest Rates</a
+                ></span
+              >
             </li>
             <li>
-              <span><a href=#B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates>Traders Benefit From Volatility Harvesting Interest Rates</a></span>
+              <span
+                ><a
+                  href="#B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
+                  >Traders Benefit From Volatility Harvesting Interest Rates</a
+                ></span
+              >
             </li>
-            <li><span><a href=#C-Fixed-Rate-Borrow>Fixed Rate Borrow</a></span></li>
-            <li><span><a href=#D-Multiplied-Variable-Rate-Exposure>Multiplied Variable Rate Exposure</a></span></li>
-            <li><span><a href=#E-Spread-Borrow>Spread Borrow</a></span></li>
+            <li>
+              <span><a href="#C-Fixed-Rate-Borrow">Fixed Rate Borrow</a></span>
+            </li>
+            <li>
+              <span
+                ><a href="#D-Multiplied-Variable-Rate-Exposure"
+                  >Multiplied Variable Rate Exposure</a
+                ></span
+              >
+            </li>
+            <li>
+              <span><a href="#E-Spread-Borrow">Spread Borrow</a></span>
+            </li>
           </ul>
         </li>
-        <li><span><a href=#Technical-Teaser>Technical Teaser</a></span></li>
-        <li><span><a href=#Simulation>Simulation</a></span></li>
+        <li>
+          <span><a href="#Technical-Teaser">Technical Teaser</a></span>
+        </li>
+        <li>
+          <span><a href="#Simulation">Simulation</a></span>
+        </li>
       </ol>
       <h3 id="1-Terms-On-Demand" data-id="1-Terms-On-Demand">
         <span>1. Terms On Demand</span>
@@ -529,7 +566,9 @@
         id="B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
         data-id="B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
       >
-        <span>B. Traders Benefit From Volatility Harvesting Interest Rates</span>
+        <span
+          >B. Traders Benefit From Volatility Harvesting Interest Rates</span
+        >
       </h4>
       <p>
         <span
