--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
       padding-bottom: 100px;
     }
 
-    #play-game-button {
+    #game-button,
+    #game-docs {
       font-family: M23;
       font-weight: bold;
       font-size: 20px;
@@ -199,13 +200,15 @@
       margin-top: 20px;
     }
 
-    #play-game-button:not([disabled]):hover {
+    #game-button:not([disabled]):hover,
+    #game-docs:not([disabled]):hover {
       transform: scale(1.02);
       transition-timing-function: ease-out;
       transition: 0.1s;
     }
 
-    #play-game-button:disabled {
+    #game-button:disabled,
+    #game-docs:disabled {
       background-color: rgb(63, 63, 63);
       cursor: default;
     }
@@ -235,10 +238,20 @@
           ></em
         >
       </p>
-      <button id="play-game-button">Play Hypers Drive Game</button>
+
+      <button id="game-button">Play Hypers Drive Game</button>
       <div>
         <canvas id="game-canvas"></canvas>
       </div>
+
+      <button id="game-docs">Instructions</button>
+      <img
+        style="display: none"
+        id="hihi"
+        src="/mihi.png"
+        alt=""
+        loading="lazy"
+      />
 
       <h2 id="A-New-Way-To-Trade-Rates" data-id="A-New-Way-To-Trade-Rates">
         <span>A New Way To Trade Rates</span>
@@ -308,25 +321,63 @@
         >
       </p>
       <ol>
-        <li><span><a href=#1-Terms-On-Demand>Terms on Demand</a></span></li>
-        <li><span><a href=#2-Consolidated-and-Everlasting-Liquidity>Consolidated and Everlasting Liquidity</a></span></li>
-        <li><span><a href=#3-Longs-and-Shorts-to-Determine-Market-Sentiment>Longs and Shorts to Determine Market Sentiment</a></span></li>
         <li>
-          <span><a href=#4-Trading-Strategies>Trading Strategies</a></span>
+          <span><a href="#1-Terms-On-Demand">Terms on Demand</a></span>
+        </li>
+        <li>
+          <span
+            ><a href="#2-Consolidated-and-Everlasting-Liquidity"
+              >Consolidated and Everlasting Liquidity</a
+            ></span
+          >
+        </li>
+        <li>
+          <span
+            ><a href="#3-Longs-and-Shorts-to-Determine-Market-Sentiment"
+              >Longs and Shorts to Determine Market Sentiment</a
+            ></span
+          >
+        </li>
+        <li>
+          <span><a href="#4-Trading-Strategies">Trading Strategies</a></span>
           <ul>
             <li>
-              <span><a href=#A-LPs-Benefit-From-Volatility-Harvesting-Interest-Rates>LPs Benefit From Volatility Harvesting Interest Rates</a></span>
+              <span
+                ><a
+                  href="#A-LPs-Benefit-From-Volatility-Harvesting-Interest-Rates"
+                  >LPs Benefit From Volatility Harvesting Interest Rates</a
+                ></span
+              >
             </li>
             <li>
-              <span><a href=#B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates>Traders Benefit From Volatility Harvesting Interest Rates</a></span>
+              <span
+                ><a
+                  href="#B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
+                  >Traders Benefit From Volatility Harvesting Interest Rates</a
+                ></span
+              >
             </li>
-            <li><span><a href=#C-Fixed-Rate-Borrow>Fixed Rate Borrow</a></span></li>
-            <li><span><a href=#D-Multiplied-Variable-Rate-Exposure>Multiplied Variable Rate Exposure</a></span></li>
-            <li><span><a href=#E-Spread-Borrow>Spread Borrow</a></span></li>
+            <li>
+              <span><a href="#C-Fixed-Rate-Borrow">Fixed Rate Borrow</a></span>
+            </li>
+            <li>
+              <span
+                ><a href="#D-Multiplied-Variable-Rate-Exposure"
+                  >Multiplied Variable Rate Exposure</a
+                ></span
+              >
+            </li>
+            <li>
+              <span><a href="#E-Spread-Borrow">Spread Borrow</a></span>
+            </li>
           </ul>
         </li>
-        <li><span><a href=#Technical-Teaser>Technical Teaser</a></span></li>
-        <li><span><a href=#Simulation>Simulation</a></span></li>
+        <li>
+          <span><a href="#Technical-Teaser">Technical Teaser</a></span>
+        </li>
+        <li>
+          <span><a href="#Simulation">Simulation</a></span>
+        </li>
       </ol>
       <h3 id="1-Terms-On-Demand" data-id="1-Terms-On-Demand">
         <span>1. Terms On Demand</span>
@@ -515,7 +566,9 @@
         id="B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
         data-id="B-Traders-Benefit-From-Volatility-Harvesting-Interest-Rates"
       >
-        <span>B. Traders Benefit From Volatility Harvesting Interest Rates</span>
+        <span
+          >B. Traders Benefit From Volatility Harvesting Interest Rates</span
+        >
       </h4>
       <p>
         <span
@@ -768,10 +821,10 @@
       <p>
         <sub
           ><em
-            ><span
+            ><i
               >The research described above is subject to further review,
               clarification, and revision. The end design of any software is
-              subject to modification.</span
+              subject to modification.</i
             ></em
           ></sub
         >
