update page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Element-Dark.png" />
-    <title>Hyerdrive</title>
+    <title>Hyperdrive</title>
     <meta
       name="keywords"
       content="Hyperdrive, Documentation, Docs, Element, Finance, Element Finance, Hyperdrive Element Finance"
