copy updated for delv branding, new favicon

--- a/index.html
+++ b/index.html
@@ -2,35 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Element-Dark.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <title>Hyperdrive</title>
     <meta
       name="keywords"
-      content="Hyperdrive, Documentation, Docs, Element, Finance, Element Finance, Hyperdrive Element Finance"
+      content="Hyperdrive, Documentation, Docs, Element, Finance, Element Finance, Hyperdrive Element Finance, Delv, Hyperdrive"
     />
     <meta
       name="description"
-      content="Hyperdrive is the next research leap from the Element Finance team on variable
+      content="Hyperdrive is the next research leap from the Delv team on variable
     and fixed rate primitives."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@elementfi" />
-    <meta name="twitter:title" content="Hyperdrive - Element Finance" />
+    <meta name="twitter:site" content="@delv_tech" />
+    <meta name="twitter:title" content="Hyperdrive - Delv" />
     <meta
       name="twitter:description"
-      content="Hyperdrive is the next research leap from the Element Finance team on variable and fixed rate primitives."
+      content="Hyperdrive is the next research leap from the Delv team on variable and fixed rate primitives."
     />
     <meta name="twitter:image" content="https://i.imgur.com/iX8k8I5.png" />
 
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Hyperdrive - Element Finance" />
+    <meta property="og:title" content="Hyperdrive - Delv" />
     <meta
       property="og:description"
-      content="Hyperdrive is the next research leap from the Element Finance team on variable and fixed rate primitives."
+      content="Hyperdrive is the next research leap from the Delv team on variable and fixed rate primitives."
     />
-    <meta property="og:url" content="https://hyperdrive.element.fi" />
+    <meta property="og:url" content="https://hyperdrive.delv.tech/" />
     <meta property="og:image" content="https://i.imgur.com/iX8k8I5.png" />
   </head>
 
@@ -223,12 +223,12 @@
       >
         <span>Hyperdrive</span>
       </h1>
-      <h4>Authored by Element Finance</h4>
+      <h4>Authored by Delv</h4>
       <p>
         <span class="ui-comment-inline-span">Hyperdrive</span
         ><span>
-          is the next research leap from the Element Finance team on variable
-          and fixed rate primitives. </span
+          is the next research leap from the Delv team on variable and fixed
+          rate primitives. </span
         ><em
           ><span
             >No preset expiration dates, no fragmented liquidity, and no LP
