--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hyperdrive</title>
     <meta
       name="keywords"
-      content="Hyperdrive, Documentation, Docs, Element, Finance, Element Finance, Hyperdrive Element Finance, Delv, Hyperdrive"
+      content="Hyperdrive, Documentation, Docs, Delv, Delvtech, Hyperdrive"
     />
     <meta
       name="description"
@@ -754,7 +754,7 @@
         <span
           >Hyperdrive is a natural extension of the concepts introduced in the
           first iteration of the </span
-        ><a href="https://paper.element.fi/" target="_blank" rel="noopener"
+        ><a href="https://docs-delv.gitbook.io/element-developer-docs" target="_blank" rel="noopener"
           ><span>Element Protocol</span></a
         ><span>
           which implemented a customised version of the constant power sum curve
